Agregado el filtro de select-entity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,7 @@
 <!-- <app-entity></app-entity> -->
 <!-- <app-add-product></app-add-product> -->
 <!-- <app-camera></app-camera> -->
-<app-form-selfie></app-form-selfie>
+<!-- <app-form-selfie></app-form-selfie> -->
+<!-- <app-grid-entity></app-grid-entity> -->
+<!-- <app-search></app-search> -->
+<app-select-entity></app-select-entity>
