Agregado el filtro de select-entity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,6 @@
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-entity></app-entity> -->
 <!-- <app-add-product></app-add-product> -->
+<!-- <app-grid-entity></app-grid-entity> -->
+<!-- <app-search></app-search> -->
+<app-select-entity></app-select-entity>
