Se agrega componente form-document

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 <!-- <app-form-phone-confirm></app-form-phone-confirm> -->
 <!-- <app-terms-conditions></app-terms-conditions> -->
 <!-- <app-terms-accept></app-terms-accept> -->
+<app-form-document></app-form-document>
 
 <!-- MARKETPLACE -->
 <!-- <app-list-product></app-list-product> -->
