--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,9 @@
 <!-- <app-entity></app-entity> -->
 <!-- <app-add-product></app-add-product> -->
 <!-- <app-camera></app-camera> -->
-<app-form-selfie></app-form-selfie>
+<!-- <app-form-selfie></app-form-selfie> -->
+<!-- <app-category></app-category> -->
+<!-- <app-list-category></app-list-category> -->
+<!-- <app-list-product-vertical></app-list-product-vertical> -->
+<app-my-products></app-my-products>
+
