--- a/src/app/pages/select-entity/select-entity.component.css
+++ b/src/app/pages/select-entity/select-entity.component.css
@@ -1,7 +1,14 @@
+.buscador{
+  padding: 1rem 0;
+  position: sticky;
+  top: 5rem;
+  background-color: #fff;
+}
+
 .titulo {
   padding: 1rem 0 0.3rem 0;
 }
 .lista {
   width: 90%;
-  margin: 2rem auto;
+  margin: 1rem auto;
 }
