Agregado select-entity, search

--- a/src/app/components/lists/grid-entity/grid-entity.component.html
+++ b/src/app/components/lists/grid-entity/grid-entity.component.html
@@ -6,6 +6,6 @@
     ></app-entity>
   </div>
 </div>
-<p class="texto" *ngIf="(entities | filter : filterEntityGrid).length == 0">
+<p class="texto" *ngIf="(entities | filterEntityF : filterEntityGrid).length == 0">
   No hay resultados
 </p>
