--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -2,16 +2,9 @@
   <app-header-cbit></app-header-cbit>
   <div class="container">
     <div class="search">
-      <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Recipient's username"
-          aria-label="Recipient's username"
-          aria-describedby="basic-addon2"
-        />
-        <span class="input-group-text" id="basic-addon2">@example.com</span>
-      </div>
+      <app-search
+        (filterEntity)="setFilterProduct($event)"
+      ></app-search>
     </div>
     <div class="contenido">
       <div class="list-category">
@@ -19,7 +12,7 @@
         <app-list-category></app-list-category>
       </div>
       <div class="list-product-vertical">
-        <h5 class="titulo">Cuentas</h5>
+        <h5 class="titulo">Cuentas</h5> <!-- TODO: Provisional -->
         <app-list-product-vertical></app-list-product-vertical>
       </div>
     </div>
