--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,9 @@
 <!-- <app-form-selfie></app-form-selfie> -->
 <!-- <app-grid-entity></app-grid-entity> -->
 <!-- <app-search></app-search> -->
-<app-select-entity></app-select-entity>
+<!-- <app-select-entity></app-select-entity> -->
 <!-- <app-category></app-category> -->
 <!-- <app-list-category></app-list-category> -->
 <!-- <app-list-product-vertical></app-list-product-vertical> -->
-<!-- <app-my-products></app-my-products> -->
+<app-my-products></app-my-products>
 
