Agregado select-entity, search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,5 +29,5 @@
 <!-- <app-category></app-category> -->
 <!-- <app-list-category></app-list-category> -->
 <!-- <app-list-product-vertical></app-list-product-vertical> -->
-<app-my-products></app-my-products>
+<!-- <app-my-products></app-my-products> -->
 
