File transaction, header-transaction, detail-transaction, list-transaction Completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,9 @@
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
 <!-- <app-header-entity></app-header-entity> -->
-<app-add-product></app-add-product>
+<!-- <app-header-transaction> </app-header-transaction> -->
+<!-- <app-detail-transaction> </app-detail-transaction> -->
+<!-- <app-add-product></app-add-product> -->
+<!-- <app-list-transactions></app-list-transactions> -->
+<app-transaction></app-transaction>
+
