--- a/src/app/components/utils/entity/entity.component.html
+++ b/src/app/components/utils/entity/entity.component.html
@@ -1,4 +1,6 @@
 <div class="logo-entity">
-    <img src="./assets/Imagenes/Nequi.jpg" alt="LogoNequi"/>
-</div>
-
+    <img
+      src="../../../../assets/entidadesF/{{ nameImage }}.png"
+      alt="{{ nameEntity }}"
+    />
+  </div>
