--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,12 +22,14 @@
 <!-- <app-entity></app-entity> -->
 <!-- <app-add-product></app-add-product> -->
 <!-- <app-camera></app-camera> -->
-<!-- <app-form-selfie></app-form-selfie> -->
 <!-- <app-grid-entity></app-grid-entity> -->
 <!-- <app-search></app-search> -->
 <!-- <app-select-entity></app-select-entity> -->
 <!-- <app-category></app-category> -->
 <!-- <app-list-category></app-list-category> -->
 <!-- <app-list-product-vertical></app-list-product-vertical> -->
-<app-my-products></app-my-products>
+<!-- <app-my-products></app-my-products> -->
 
+
+<!-- <app-camera2></app-camera2> -->
+<app-form-selfie></app-form-selfie>
