--- a/src/app/components/utils/camera/camera.component.css
+++ b/src/app/components/utils/camera/camera.component.css
@@ -1,34 +1,38 @@
-body{
+body {
   background-color: transparent;
 }
-.div-cam{
+.isSelfie {
+  border-radius: 50%;
+}
+.isDocument {
+  rotate: -90deg;
+}
+.div-cam {
   margin: 0 auto;
   background-color: #fff;
-  height: 40vh;
-  width: 80%;
+  width: 14rem;
+  height: 21rem;
   color: white;
-  border: 3px solid #00EAFF;
-  border-radius: 50%;
-  background-color: #D9D9D9;
+  border: 3px solid #00eaff;
+  background-color: #d9d9d9;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
 }
-.bi-person{
+.bi {
   color: black;
-  font-size: 15rem;
+  font-size: 12rem;
   display: flex;
   align-items: center;
   margin: 0 auto;
 }
-video{
+video {
   height: 100%;
   width: 100%;
-  border-radius: 50%;
   object-fit: cover;
 }
-.boton{
+.boton {
   cursor: pointer;
   box-shadow: 0 4px 4px rgba(255, 255, 255, 0.5);
   margin: 1rem auto;
@@ -40,13 +44,13 @@ video{
   border-radius: 50%;
   border: 3px solid black;
 }
-.bi-circle-fill{
+.bi-circle-fill {
   font-size: 20px;
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.display-none{
+.display-none {
   display: none;
 }
