Agregado form-document

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,4 +32,5 @@
 
 
 <!-- <app-camera2></app-camera2> -->
-<app-form-selfie></app-form-selfie>
+<!-- <app-form-selfie></app-form-selfie> -->
+<!-- <app-form-document></app-form-document> -->
