--- a/src/app/pages/form-document/form-document.component.css
+++ b/src/app/pages/form-document/form-document.component.css
@@ -1,17 +1,17 @@
-.container{
+.container {
   display: flex;
   flex-direction: column;
   max-width: 95%;
   gap: 1rem;
 }
-.titulo{
-  font-family: 'Open Sans', sans-serif;
+.titulo {
+  font-family: "Open Sans", sans-serif;
   font-size: 24px;
   font-weight: regular;
   text-align: center;
   margin-top: 2rem;
   color: white;
 }
-.boton{
+.boton {
   padding: 2rem;
 }
