--- a/src/app/pages/form-selfie/form-selfie.component.html
+++ b/src/app/pages/form-selfie/form-selfie.component.html
@@ -3,13 +3,20 @@
   <div class="container">
     <h1 class="titulo">Tome una foto de su rostro</h1>
     <app-indicator></app-indicator>
-    <app-camera
-      [type]="'selfie'"
-      [icon]="'bi-person'"
-      (onPhoto)="savePhoto($event)"
-    ></app-camera>
+    <div class="camera">
+      <app-camera
+        [type]="'selfie'"
+        [icon]="'bi-person'"
+        (onPhoto)="savePhoto($event)"
+      ></app-camera>
+    </div>
     <div class="boton">
-      <app-btn-cbit [text]="'Continuar'" [type]="'button'"> </app-btn-cbit>
+      <app-btn-cbit
+        [text]="'Continuar'"
+        [type]="'button'"
+        [disabled]="imageData == ''"
+      >
+      </app-btn-cbit>
     </div>
   </div>
 </body>
