--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,48 @@
+<!-- HEADERS -->
 <!-- <app-header-cbit></app-header-cbit> -->
+<!-- <app-header-login></app-header-login> -->
+<!-- <app-header-entity></app-header-entity> -->
+<!-- <app-header-marketplace></app-header-marketplace> -->
+<!-- <app-header-transaction></app-header-transaction> -->
+
+<!-- LISTS -->
+<!-- <app-list-product></app-list-product> -->
+<!-- <app-list-category></app-list-category> -->
+<!-- <app-list-products></app-list-products> -->
+<!-- <app-list-product-vertical></app-list-product-vertical> -->
+<!-- <app-grid-entity></app-grid-entity> -->
+<!-- <app-list-recommendations></app-list-recommendations> -->
+<!-- <app-list-transaction></app-list-transaction> -->
+
+<!-- UTILS -->
 <!-- <app-btn-cbit></app-btn-cbit> -->
 <!-- <app-indicator></app-indicator> -->
 <!-- <app-item-registro></app-item-registro> -->
 <!-- <app-back></app-back> -->
-<!-- <app-header-login></app-header-login> -->
-<!-- <app-header-entity></app-header-entity> -->
 <!-- <app-product></app-product> -->
+<!-- <app-entity></app-entity> -->
+<!-- <app-camera></app-camera> -->
+<!-- <app-search></app-search> -->
+<!-- <app-category></app-category> -->
+<!-- <app-detail-transaction></app-detail-transaction> -->
+
+<!-- PAGES -->
 <!-- <app-menu-registration></app-menu-registration> -->
 <!-- <app-form-registration></app-form-registration> -->
-<!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
 <!-- <app-form-phone-confirm></app-form-phone-confirm> -->
 <!-- <app-terms-conditions></app-terms-conditions> -->
 <!-- <app-terms-accept></app-terms-accept> -->
 <!-- <app-form-password></app-form-password> -->
 <!-- <app-dashboard></app-dashboard> -->
-<!-- <app-list-product></app-list-product> -->
 <!-- <app-detail-product></app-detail-product> -->
 <!-- <app-cart></app-cart> -->
-<!-- <app-header-marketplace></app-header-marketplace> -->
-<!-- <app-entity></app-entity> -->
 <!-- <app-add-product></app-add-product> -->
-<!-- <app-camera></app-camera> -->
-<!-- <app-grid-entity></app-grid-entity> -->
-<!-- <app-search></app-search> -->
 <!-- <app-select-entity></app-select-entity> -->
-<!-- <app-category></app-category> -->
-<!-- <app-list-category></app-list-category> -->
-<!-- <app-list-product-vertical></app-list-product-vertical> -->
 <!-- <app-my-products></app-my-products> -->
-
-
-<!-- <app-camera2></app-camera2> -->
 <!-- <app-form-selfie></app-form-selfie> -->
 <!-- <app-form-document></app-form-document> -->
+<!-- <app-transaction></app-transaction> -->
+
+
+
