Agregado el voucher

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
 <!-- <app-form-selfie></app-form-selfie> -->
 <!-- <app-form-document></app-form-document> -->
 <!-- <app-transaction></app-transaction> -->
+<!-- <app-voucher></app-voucher> -->
 
 
 
