--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <!-- HEADERS -->
 <!-- <app-header-cbit></app-header-cbit> -->
 <!-- <app-header-login></app-header-login> -->
@@ -44,6 +45,5 @@
 <!-- <app-form-document></app-form-document> -->
 <!-- <app-transaction></app-transaction> -->
 <!-- <app-voucher></app-voucher> -->
-
 
 
