Routing a list-product, cart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,6 @@
 <!-- <app-header-transaction></app-header-transaction> -->
 
 <!-- LISTS -->
-<!-- <app-list-product></app-list-product> -->
 <!-- <app-list-category></app-list-category> -->
 <!-- <app-list-products></app-list-products> -->
 <!-- <app-list-product-vertical></app-list-product-vertical> -->
@@ -28,6 +27,11 @@
 <!-- <app-detail-transaction></app-detail-transaction> -->
 
 <!-- PAGES -->
+<!-- NOTE: OK -->
+<!-- <app-list-product></app-list-product> -->
+
+
+<!-- NOTE: PENDING -->
 <!-- <app-menu-registration></app-menu-registration> -->
 <!-- <app-form-registration></app-form-registration> -->
 <!-- <app-login></app-login> -->
