--- a/src/app/components/headers/header-cbit/header-cbit.component.html
+++ b/src/app/components/headers/header-cbit/header-cbit.component.html
@@ -1,7 +1,7 @@
 <body>
   <div class="container">
-    <app-back [routerLink]="'/'"></app-back>
+    <app-back [routerLink]="routerLinkBack"></app-back>
     <img src="../../../assets/logo.png" alt="Logo Cbitbank" />
-    <app-help [routerLink]="'/'"></app-help>
+    <app-help></app-help>
   </div>
 </body>
