--- a/src/app/components/marketplace/pages/detail-product/detail-product.component.html
+++ b/src/app/components/marketplace/pages/detail-product/detail-product.component.html
@@ -1,5 +1,5 @@
 <app-header-marketplace></app-header-marketplace>
-<a routerLink="/products" class="atras">
+<a routerLink="/" class="atras">
   <i class="bi bi-arrow-left"></i>
 </a>
 <h2 class="titulo my-3">Detalle del producto</h2>
