--- a/src/app/components/marketplace/utils/header-marketplace/header-marketplace.component.html
+++ b/src/app/components/marketplace/utils/header-marketplace/header-marketplace.component.html
@@ -9,16 +9,10 @@
       </a>
       <ul class="navbar-nav justify-content-center align-items-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="products">Productos</a>
+          <a class="nav-link active" routerLink="/">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Billetera</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Mis bancos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Perfil</a>
+          <a class="nav-link" routerLink="/login">Iniciar sesión</a>
         </li>
       </ul>
     </div>
