--- a/src/app/components/marketplace/utils/product/product.component.html
+++ b/src/app/components/marketplace/utils/product/product.component.html
@@ -1,13 +1,28 @@
 <body>
   <div class="card">
-    <img src="{{ product.image }}" class="card-img-top my-2" alt="Imagen {{ product.title }}">
+    <img
+      src="{{ product.image }}"
+      class="card-img-top my-2"
+      alt="Imagen {{ product.title }}"
+    />
     <div class="card-body">
       <h5 class="card-title">{{ product.title }}</h5>
       <p class="card-text">{{ product.description.toString() }}</p>
       <p class="card-text">Price: {{ product.price | currency }}</p>
       <div class="actions">
-        <button class="btn btn-secondary " [routerLink]="[product.id!]">Ver</button>
-        <button class="btn btn-primary " (click)="agregarAlCarrito()" [disabled]="agregado">{{ agregado ? 'Agregado' : 'Agregar' }}</button>
+        <a
+          class="btn btn-secondary"
+          routerLink="ecommerce/products/{{ product.id }}"
+        >
+          Ver
+        </a>
+        <button
+          class="btn btn-primary"
+          (click)="agregarAlCarrito()"
+          [disabled]="agregado"
+        >
+          {{ agregado ? "Agregado" : "Agregar" }}
+        </button>
       </div>
     </div>
   </div>
