--- a/src/app/components/utils/btn-cbit/btn-cbit.component.html
+++ b/src/app/components/utils/btn-cbit/btn-cbit.component.html
@@ -2,9 +2,9 @@
   <button
     type="{{ type }}"
     class="btn btn-primary"
-    [routerLink]="routerLink"
     [disabled]="disabled"
-  >
+    >
+    <!-- [routerLink]="routerLink" -->
     {{ text }}
   </button>
 </div>
