--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -139,6 +139,7 @@ input[type="password"] {
   font-weight: bold;
   cursor: pointer;
   text-decoration: underline;
+  color: white;
 }
 .texto-final.password{
   padding: 1rem 0;
