Routing a menu-registration

--- a/src/app/components/utils/btn-cbit/btn-cbit.component.html
+++ b/src/app/components/utils/btn-cbit/btn-cbit.component.html
@@ -3,8 +3,10 @@
     type="{{ type }}"
     class="btn btn-primary"
     [disabled]="disabled"
+    (click)="click()"
     >
     <!-- [routerLink]="routerLink" -->
+
     {{ text }}
   </button>
 </div>
