--- a/src/app/components/utils/item-registro/item-registro.component.css
+++ b/src/app/components/utils/item-registro/item-registro.component.css
@@ -7,15 +7,22 @@
 .card{
   margin-bottom: 1rem;
 }
+.card:hover{
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
 .card-title{
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 0;
   margin-top: 0.5rem;
 }
-.bi{
+.bi {
   font-size: 30px;
   color: #00B8E2;
+}
+.bi-check-circle-fill{
+  color: #00FFC2;
 }
 .texto{
   justify-content: center;
