Routing a form-registration

--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
@@ -24,14 +24,12 @@
       </div>
     </div>
     <app-otp></app-otp>
-    <div class="texto mt-4 txt-20-bold ">
+    <div class="texto mt-4 txt-16">
       <p>¿No recibió el código?</p>
     </div>
-    <div class="texto txt-20-normal">
+    <div class="texto txt-18-normal">
       <a class="link">Volver a enviar código</a>
     </div>
-    <app-btn-cbit
-      [text]="'Continuar'"
-    ></app-btn-cbit>
+    <app-btn-cbit [text]="'Continuar'"></app-btn-cbit>
   </div>
 </body>
