--- a/src/app/components/utils/item-registro/item-registro.component.html
+++ b/src/app/components/utils/item-registro/item-registro.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="click()">
   <div class="card-body">
     <div class="icono">
       <i class="{{ icon }}"></i>
