--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-header-cbit></app-header-cbit>
+  <app-header-cbit [routerLinkBack]="'/register'"></app-header-cbit>
   <div class="container">
     <h1 class="titulo">Código de verificación</h1>
     <app-indicator></app-indicator>
@@ -16,20 +16,25 @@
       </div>
       <div class="input-telefono" *ngIf="editPhone">
         <div class="input-group">
-          <input class="form-control" type="tel" />
+          <input class="form-control" type="tel" [(ngModel)]="phone" />
           <span class="input-group-text"
             ><i class="bi bi-floppy" (click)="changeEditPhone()"></i
           ></span>
         </div>
       </div>
     </div>
-    <app-otp></app-otp>
+    <app-otp (onDigit)="setOtpUser($event)"></app-otp>
     <div class="texto mt-4 txt-16">
       <p>¿No recibió el código?</p>
     </div>
     <div class="texto txt-18-normal">
-      <a class="link">Volver a enviar código</a>
+      <button type="button" class="btn link" disabled>
+        Volver a enviar código
+      </button>
     </div>
-    <app-btn-cbit [text]="'Continuar'"></app-btn-cbit>
+    <app-btn-cbit
+      [text]="'Continuar'"
+      [disabled]="otpUser.length < 6"
+    ></app-btn-cbit>
   </div>
 </body>
