Routing de form-password

--- a/src/app/pages/form-password/form-password.component.css
+++ b/src/app/pages/form-password/form-password.component.css
@@ -31,10 +31,13 @@
   color: white;
   font-weight: 400;
   font-size: 20px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 .form-control {
   font-size: 20px;
+}
+.alert{
+  margin: 0;
 }
 app-btn-cbit {
   padding: 3rem;
