--- a/src/app/pages/form-password/form-password.component.html
+++ b/src/app/pages/form-password/form-password.component.html
@@ -1,5 +1,7 @@
 <body>
-  <app-header-cbit></app-header-cbit>
+  <app-header-cbit
+    [routerLinkBack]="'/register/phone-confirm'"
+  ></app-header-cbit>
   <div class="container">
     <h1 class="titulo">Clave</h1>
     <app-indicator></app-indicator>
