--- a/src/app/pages/form-document/form-document.component.html
+++ b/src/app/pages/form-document/form-document.component.html
@@ -1,5 +1,7 @@
 <body>
-  <app-header-cbit></app-header-cbit>
+  <app-header-cbit
+    [routerLinkBack]="'/register'"
+  ></app-header-cbit>
   <div class="container">
     <h1 class="titulo">{{ titulo }}</h1>
     <app-indicator></app-indicator>
@@ -16,14 +18,14 @@
           [type]="'document'"
           [icon]="'bi-postcard'"
           (onPhoto)="savePhoto($event)"
-        ></app-camera>
+          ></app-camera>
       </div>
     </div>
     <app-btn-cbit
       class="boton"
-      (click)="saveData()"
+      (onClickEvent)="saveData()"
       [text]="'Continuar'"
-      [disabled]="imageData == ''"
+      [disabled]="!activeBtn"
     ></app-btn-cbit>
   </div>
 </body>
