Routing a add-product

--- a/src/app/components/headers/header-cbit/header-cbit.component.html
+++ b/src/app/components/headers/header-cbit/header-cbit.component.html
@@ -2,6 +2,6 @@
   <div class="container">
     <app-back [routerLink]="routerLinkBack"></app-back>
     <img src="../../../assets/logo.png" alt="Logo Cbitbank" />
-    <app-help></app-help>
+    <app-help [routerLinHelp]="routerLinkHelp"></app-help>
   </div>
 </body>
