--- a/src/app/components/marketplace/utils/header-marketplace/header-marketplace.component.html
+++ b/src/app/components/marketplace/utils/header-marketplace/header-marketplace.component.html
@@ -4,7 +4,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse otra" id="navbarToggler">
-      <a class="navbar-brand" routerLink="/products">
+      <a class="navbar-brand" routerLink="/">
         <img src="../../../../../assets/marketplace/LogoMarketplace.png" alt="Logo de open banking">
       </a>
       <ul class="navbar-nav justify-content-center align-items-center">
