--- a/src/app/pages/form-password/form-password.component.html
+++ b/src/app/pages/form-password/form-password.component.html
@@ -1,6 +1,7 @@
 <body>
   <app-header-cbit
-    [routerLinkBack]="'/register/phone-confirm'"
+    [routerLinkBack]="routes.back"
+    [routerLinkHelp]="routes.help"
   ></app-header-cbit>
   <div class="container">
     <h1 class="titulo">Clave</h1>
