--- a/src/app/components/headers/header-login/header-login.component.html
+++ b/src/app/components/headers/header-login/header-login.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="icono-help">
-    <app-help></app-help>
+    <app-help
+      [routerLinHelp]="routerLinkHelp"
+    ></app-help>
   </div>
   <div class="logos">
     <img
