--- a/src/app/components/utils/search/search.component.html
+++ b/src/app/components/utils/search/search.component.html
@@ -4,7 +4,7 @@
     class="form-control"
     placeholder="{{ placeholder }}"
     aria-describedby="basic-addon2"
-    (keyup)="textoFiltro($event)"
+    (keyup)="setTxtFilter($event)"
   />
   <span class="input-group-text" id="basic-addon2"
     ><i class="bi bi-search"></i
