--- a/src/app/pages/menu-registration/menu-registration.component.html
+++ b/src/app/pages/menu-registration/menu-registration.component.html
@@ -1,5 +1,8 @@
 <body>
-  <app-header-cbit [routerLinkBack]="'/login'"></app-header-cbit>
+  <app-header-cbit
+    [routerLinkBack]="routes.back"
+    [routerLinkHelp]="routes.help"
+  ></app-header-cbit>
   <div class="container">
     <h1 class="titulo">Completa tu información</h1>
 
