--- a/src/app/pages/select-entity/select-entity.component.html
+++ b/src/app/pages/select-entity/select-entity.component.html
@@ -1,13 +1,13 @@
-<app-header-cbit></app-header-cbit>
+<app-header-cbit [routerLinkBack]="routes.back" [routerLinkHelp]="routes.help"></app-header-cbit>
 <div class="container">
   <div class="buscador">
     <h5 class="text-input">Elige tu banco</h5>
     <app-search
       [placeholder]="'Escribe el nombre de la entidad...'"
-      (filterEntity)="recibirMensaje($event)"
+      (onTxtFilter)="setFilter($event)"
     />
   </div>
   <div class="lista">
-    <app-grid-entity [filterEntityGrid]="textoRecibido"></app-grid-entity>
+    <app-grid-entity [txtFilter]="txtFilter"></app-grid-entity>
   </div>
 </div>
