--- a/src/app/components/headers/header-transaction/header-transaction.component.html
+++ b/src/app/components/headers/header-transaction/header-transaction.component.html
@@ -8,8 +8,7 @@
       <h1>Movimientos</h1>
       <div class="logo-entidad">
         <app-entity
-          [nameEntity]="nameEntity"
-          [nameImage]="nameImage"
+          [entity]="entity"
         ></app-entity>
       </div>
       <div class="account-detail">
