--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
@@ -2,8 +2,7 @@
   <div class="product" *ngFor="let product of products">
     <div class="entity">
       <app-entity
-        [nameEntity]="product.nameEntity"
-        [nameImage]="product.nameImage"
+        [entity]="entity"
       ></app-entity>
     </div>
     <div class="datos">
