--- a/src/app/components/utils/product-f/product-f.component.html
+++ b/src/app/components/utils/product-f/product-f.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <img src="{{ img }}" class="card-img-top" alt="{{ tipoProd }}" />
+  <img src="../../../../assets/entidadesF/{{ img }}.png" class="card-img-top" alt="{{ tipoProd }}" />
   <div class="card-body" *ngIf="mostrarSaldo">
     <p class="card-text">{{ tipoProd }}</p>
     <p class="card-text">{{ montoProd | currency }}</p>
