--- a/src/app/pages/transaction/transaction.component.html
+++ b/src/app/pages/transaction/transaction.component.html
@@ -1,8 +1,7 @@
 <body>
   <div class="header">
     <app-header-transaction
-      [nameEntity]="nameEntity"
-      [nameImage]="nameImage"
+      [entity]="entity"
       [typeProduct]="typeProduct"
       [accountNumber]="accountNumber"
     ></app-header-transaction>
